# percival_vision_mcp

./: QUICKSTART.md  README.md  main.py  pyproject.toml  server.py  vision_models.json
docs/: WINDOWS_INSTALL.md
docs/refactor/: BASELINE_2026-03-31.md  P0_SECURITY_HARDENING.md  P1_SECURITY_HARDENING.md  P2_SECURITY_HARDENING.md  PHASES_1_2_IMPLEMENTATION.md  PHASES_4_5_IMPLEMENTATION.md  PHASES_6_7_IMPLEMENTATION.md  baseline_snapshot.json
examples/: claude_desktop_config_with_venv.json  ericai_mcp_chat_config.json  usage_examples.py
src/: __init__.py  config.py  server.py
tests/: __init__.py  test_policy_audit_p2.py  test_prompt_injection_p1.py  test_rollout_runtime.py  test_security_p0.py  test_server.py  test_vision_model_catalog.py
tools/: __init__.py  vision_tools.py
utils/: __init__.py  client.py  config.py  contracts.py  nanobot_profile.py  path_utils.py  policy_utils.py  runtime_config.py  security_utils.py  vision_model_catalog.py
