[project]
name = "percival-vision-mcp"
version = "0.1.0"
description = "Agnostic MCP Server for Computer Vision, optimized for Venice.ai and Nanobot."
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "mcp[cli]>=1.0.0",
    "openai>=1.0.0",
    "pillow>=10.0.0"
]

[project.scripts]
percival-vision = "src.server:main"
