[project]
name = "percival-vision-mcp"
version = "0.7.0"
description = "Agnostic FastMCP server for Computer Vision and Image Analysis, optimized for nanobot orchestration."
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "mcp[cli]>=1.12.0",
    "openai>=2.29.0,<3",
    "pillow>=10.0.0",
    "starlette>=0.45.0",
    "uvicorn>=0.34.0"
]

[project.scripts]
percival-vision-mcp = "main:main"
percival-vision = "main:main"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
]
